// Bun Snapshot v1, https://bun.sh/docs/test/snapshots

exports[`generateModelConfig no providers available returns ULTIMATE_FALLBACK for all agents and categories when no providers 1`] = `
{
  "$schema": "https://raw.githubusercontent.com/klpanagi/matrixx/dev/assets/matrixx.schema.json",
  "agents": {
    "architect": {
      "model": "opencode/glm-4.7-free",
    },
    "cipher": {
      "model": "opencode/glm-4.7-free",
    },
    "construct": {
      "model": "opencode/glm-4.7-free",
    },
    "keymaker": {
      "model": "opencode/glm-4.7-free",
    },
    "merovingian": {
      "model": "opencode/glm-4.7-free",
    },
    "niobe": {
      "model": "opencode/glm-4.7-free",
    },
    "operator": {
      "model": "opencode/glm-4.7-free",
    },
    "oracle": {
      "model": "opencode/glm-4.7-free",
    },
    "sentinel": {
      "model": "opencode/glm-4.7-free",
    },
    "seraph": {
      "model": "opencode/glm-4.7-free",
    },
    "smith": {
      "model": "opencode/glm-4.7-free",
    },
    "trinity": {
      "model": "opencode/glm-4.7-free",
    },
    "zion": {
      "model": "opencode/glm-4.7-free",
    },
  },
  "categories": {
    "blue-pill": {
      "model": "opencode/glm-4.7-free",
    },
    "broadcast": {
      "model": "opencode/glm-4.7-free",
    },
    "bullet-time": {
      "model": "opencode/glm-4.7-free",
    },
    "construct": {
      "model": "opencode/glm-4.7-free",
    },
    "deep-jack": {
      "model": "opencode/glm-4.7-free",
    },
    "matrix-bend": {
      "model": "opencode/glm-4.7-free",
    },
    "red-pill": {
      "model": "opencode/glm-4.7-free",
    },
    "source": {
      "model": "opencode/glm-4.7-free",
    },
  },
}
`;

exports[`generateModelConfig single native provider uses Claude models when only Claude is available 1`] = `
{
  "$schema": "https://raw.githubusercontent.com/klpanagi/matrixx/dev/assets/matrixx.schema.json",
  "agents": {
    "architect": {
      "model": "anthropic/claude-sonnet-4-6",
    },
    "cipher": {
      "model": "anthropic/claude-sonnet-4-6",
    },
    "construct": {
      "model": "opencode/glm-4.7-free",
    },
    "merovingian": {
      "model": "anthropic/claude-opus-4-6",
      "variant": "max",
    },
    "morpheus": {
      "model": "anthropic/claude-opus-4-6",
      "variant": "max",
    },
    "niobe": {
      "model": "anthropic/claude-sonnet-4-6",
    },
    "operator": {
      "model": "anthropic/claude-sonnet-4-6",
    },
    "oracle": {
      "model": "anthropic/claude-opus-4-6",
      "variant": "max",
    },
    "sentinel": {
      "model": "anthropic/claude-sonnet-4-6",
    },
    "seraph": {
      "model": "anthropic/claude-opus-4-6",
      "variant": "max",
    },
    "smith": {
      "model": "anthropic/claude-opus-4-6",
      "variant": "max",
    },
    "trinity": {
      "model": "anthropic/claude-haiku-4-5",
    },
    "zion": {
      "model": "anthropic/claude-sonnet-4-6",
    },
  },
  "categories": {
    "blue-pill": {
      "model": "anthropic/claude-sonnet-4-6",
    },
    "broadcast": {
      "model": "anthropic/claude-sonnet-4-6",
    },
    "bullet-time": {
      "model": "anthropic/claude-haiku-4-5",
    },
    "construct": {
      "model": "anthropic/claude-opus-4-6",
      "variant": "max",
    },
    "red-pill": {
      "model": "anthropic/claude-sonnet-4-6",
    },
    "source": {
      "model": "anthropic/claude-opus-4-6",
      "variant": "max",
    },
  },
}
`;

exports[`generateModelConfig single native provider uses Claude models with isMax20 flag 1`] = `
{
  "$schema": "https://raw.githubusercontent.com/klpanagi/matrixx/dev/assets/matrixx.schema.json",
  "agents": {
    "architect": {
      "model": "anthropic/claude-sonnet-4-6",
    },
    "cipher": {
      "model": "anthropic/claude-sonnet-4-6",
    },
    "construct": {
      "model": "opencode/glm-4.7-free",
    },
    "merovingian": {
      "model": "anthropic/claude-opus-4-6",
      "variant": "max",
    },
    "morpheus": {
      "model": "anthropic/claude-opus-4-6",
      "variant": "max",
    },
    "niobe": {
      "model": "anthropic/claude-sonnet-4-6",
    },
    "operator": {
      "model": "anthropic/claude-sonnet-4-6",
    },
    "oracle": {
      "model": "anthropic/claude-opus-4-6",
      "variant": "max",
    },
    "sentinel": {
      "model": "anthropic/claude-sonnet-4-6",
    },
    "seraph": {
      "model": "anthropic/claude-opus-4-6",
      "variant": "max",
    },
    "smith": {
      "model": "anthropic/claude-opus-4-6",
      "variant": "max",
    },
    "trinity": {
      "model": "anthropic/claude-haiku-4-5",
    },
    "zion": {
      "model": "anthropic/claude-sonnet-4-6",
    },
  },
  "categories": {
    "blue-pill": {
      "model": "anthropic/claude-sonnet-4-6",
    },
    "broadcast": {
      "model": "anthropic/claude-sonnet-4-6",
    },
    "bullet-time": {
      "model": "anthropic/claude-haiku-4-5",
    },
    "construct": {
      "model": "anthropic/claude-opus-4-6",
      "variant": "max",
    },
    "red-pill": {
      "model": "anthropic/claude-opus-4-6",
      "variant": "max",
    },
    "source": {
      "model": "anthropic/claude-opus-4-6",
      "variant": "max",
    },
  },
}
`;

exports[`generateModelConfig single native provider uses OpenAI models when only OpenAI is available 1`] = `
{
  "$schema": "https://raw.githubusercontent.com/klpanagi/matrixx/dev/assets/matrixx.schema.json",
  "agents": {
    "architect": {
      "model": "openai/gpt-5.2",
    },
    "cipher": {
      "model": "openai/gpt-5.2",
    },
    "construct": {
      "model": "openai/gpt-5.2",
    },
    "keymaker": {
      "model": "openai/gpt-5.3-codex",
      "variant": "medium",
    },
    "merovingian": {
      "model": "openai/gpt-5.2",
      "variant": "high",
    },
    "niobe": {
      "model": "openai/gpt-5.2",
    },
    "operator": {
      "model": "opencode/glm-4.7-free",
    },
    "oracle": {
      "model": "openai/gpt-5.4",
      "variant": "high",
    },
    "sentinel": {
      "model": "openai/gpt-5.2",
    },
    "seraph": {
      "model": "openai/gpt-5.2",
      "variant": "high",
    },
    "smith": {
      "model": "openai/gpt-5.2",
      "variant": "medium",
    },
    "trinity": {
      "model": "opencode/gpt-5-nano",
    },
    "zion": {
      "model": "openai/gpt-5.2",
    },
  },
  "categories": {
    "blue-pill": {
      "model": "openai/gpt-5.3-codex",
      "variant": "medium",
    },
    "broadcast": {
      "model": "opencode/glm-4.7-free",
    },
    "bullet-time": {
      "model": "openai/gpt-5.4-mini",
    },
    "construct": {
      "model": "opencode/glm-4.7-free",
    },
    "deep-jack": {
      "model": "openai/gpt-5.3-codex",
      "variant": "medium",
    },
    "red-pill": {
      "model": "openai/gpt-5.3-codex",
      "variant": "medium",
    },
    "source": {
      "model": "openai/gpt-5.3-codex",
      "variant": "xhigh",
    },
  },
}
`;

exports[`generateModelConfig single native provider uses OpenAI models with isMax20 flag 1`] = `
{
  "$schema": "https://raw.githubusercontent.com/klpanagi/matrixx/dev/assets/matrixx.schema.json",
  "agents": {
    "architect": {
      "model": "openai/gpt-5.2",
    },
    "cipher": {
      "model": "openai/gpt-5.2",
    },
    "construct": {
      "model": "openai/gpt-5.2",
    },
    "keymaker": {
      "model": "openai/gpt-5.3-codex",
      "variant": "medium",
    },
    "merovingian": {
      "model": "openai/gpt-5.2",
      "variant": "high",
    },
    "niobe": {
      "model": "openai/gpt-5.2",
    },
    "operator": {
      "model": "opencode/glm-4.7-free",
    },
    "oracle": {
      "model": "openai/gpt-5.4",
      "variant": "high",
    },
    "sentinel": {
      "model": "openai/gpt-5.2",
    },
    "seraph": {
      "model": "openai/gpt-5.2",
      "variant": "high",
    },
    "smith": {
      "model": "openai/gpt-5.2",
      "variant": "medium",
    },
    "trinity": {
      "model": "opencode/gpt-5-nano",
    },
    "zion": {
      "model": "openai/gpt-5.2",
    },
  },
  "categories": {
    "blue-pill": {
      "model": "openai/gpt-5.3-codex",
      "variant": "medium",
    },
    "broadcast": {
      "model": "opencode/glm-4.7-free",
    },
    "bullet-time": {
      "model": "openai/gpt-5.4-mini",
    },
    "construct": {
      "model": "opencode/glm-4.7-free",
    },
    "deep-jack": {
      "model": "openai/gpt-5.3-codex",
      "variant": "medium",
    },
    "red-pill": {
      "model": "openai/gpt-5.2",
      "variant": "high",
    },
    "source": {
      "model": "openai/gpt-5.3-codex",
      "variant": "xhigh",
    },
  },
}
`;

exports[`generateModelConfig single native provider uses Gemini models when only Gemini is available 1`] = `
{
  "$schema": "https://raw.githubusercontent.com/klpanagi/matrixx/dev/assets/matrixx.schema.json",
  "agents": {
    "architect": {
      "model": "opencode/glm-4.7-free",
    },
    "cipher": {
      "model": "google/gemini-3.1-pro",
    },
    "construct": {
      "model": "google/gemini-3-flash",
    },
    "merovingian": {
      "model": "google/gemini-3.1-pro",
      "variant": "high",
    },
    "niobe": {
      "model": "google/gemini-3.1-pro",
    },
    "operator": {
      "model": "opencode/glm-4.7-free",
    },
    "oracle": {
      "model": "google/gemini-3.1-pro",
    },
    "sentinel": {
      "model": "google/gemini-3.1-pro",
    },
    "seraph": {
      "model": "google/gemini-3.1-pro",
      "variant": "high",
    },
    "smith": {
      "model": "google/gemini-3.1-pro",
      "variant": "high",
    },
    "trinity": {
      "model": "opencode/gpt-5-nano",
    },
    "zion": {
      "model": "google/gemini-3.1-pro",
    },
  },
  "categories": {
    "blue-pill": {
      "model": "google/gemini-3-flash",
    },
    "broadcast": {
      "model": "google/gemini-3-flash",
    },
    "bullet-time": {
      "model": "google/gemini-3-flash",
    },
    "construct": {
      "model": "google/gemini-3.1-pro",
      "variant": "high",
    },
    "matrix-bend": {
      "model": "google/gemini-3.1-pro",
      "variant": "high",
    },
    "red-pill": {
      "model": "google/gemini-3-flash",
    },
    "source": {
      "model": "google/gemini-3.1-pro",
      "variant": "high",
    },
  },
}
`;

exports[`generateModelConfig single native provider uses Gemini models with isMax20 flag 1`] = `
{
  "$schema": "https://raw.githubusercontent.com/klpanagi/matrixx/dev/assets/matrixx.schema.json",
  "agents": {
    "architect": {
      "model": "opencode/glm-4.7-free",
    },
    "cipher": {
      "model": "google/gemini-3.1-pro",
    },
    "construct": {
      "model": "google/gemini-3-flash",
    },
    "merovingian": {
      "model": "google/gemini-3.1-pro",
      "variant": "high",
    },
    "niobe": {
      "model": "google/gemini-3.1-pro",
    },
    "operator": {
      "model": "opencode/glm-4.7-free",
    },
    "oracle": {
      "model": "google/gemini-3.1-pro",
    },
    "sentinel": {
      "model": "google/gemini-3.1-pro",
    },
    "seraph": {
      "model": "google/gemini-3.1-pro",
      "variant": "high",
    },
    "smith": {
      "model": "google/gemini-3.1-pro",
      "variant": "high",
    },
    "trinity": {
      "model": "opencode/gpt-5-nano",
    },
    "zion": {
      "model": "google/gemini-3.1-pro",
    },
  },
  "categories": {
    "blue-pill": {
      "model": "google/gemini-3-flash",
    },
    "broadcast": {
      "model": "google/gemini-3-flash",
    },
    "bullet-time": {
      "model": "google/gemini-3-flash",
    },
    "construct": {
      "model": "google/gemini-3.1-pro",
      "variant": "high",
    },
    "matrix-bend": {
      "model": "google/gemini-3.1-pro",
      "variant": "high",
    },
    "red-pill": {
      "model": "google/gemini-3.1-pro",
    },
    "source": {
      "model": "google/gemini-3.1-pro",
      "variant": "high",
    },
  },
}
`;

exports[`generateModelConfig all native providers uses preferred models from fallback chains when all natives available 1`] = `
{
  "$schema": "https://raw.githubusercontent.com/klpanagi/matrixx/dev/assets/matrixx.schema.json",
  "agents": {
    "architect": {
      "model": "anthropic/claude-sonnet-4-6",
    },
    "cipher": {
      "model": "anthropic/claude-sonnet-4-6",
    },
    "construct": {
      "model": "google/gemini-3-flash",
    },
    "keymaker": {
      "model": "openai/gpt-5.3-codex",
      "variant": "medium",
    },
    "merovingian": {
      "model": "openai/gpt-5.2",
      "variant": "high",
    },
    "morpheus": {
      "model": "anthropic/claude-opus-4-6",
      "variant": "max",
    },
    "niobe": {
      "model": "anthropic/claude-sonnet-4-6",
    },
    "operator": {
      "model": "anthropic/claude-sonnet-4-6",
    },
    "oracle": {
      "model": "anthropic/claude-opus-4-6",
      "variant": "max",
    },
    "sentinel": {
      "model": "anthropic/claude-sonnet-4-6",
    },
    "seraph": {
      "model": "anthropic/claude-opus-4-6",
      "variant": "max",
    },
    "smith": {
      "model": "openai/gpt-5.2",
      "variant": "medium",
    },
    "trinity": {
      "model": "anthropic/claude-haiku-4-5",
    },
    "zion": {
      "model": "anthropic/claude-sonnet-4-6",
    },
  },
  "categories": {
    "blue-pill": {
      "model": "anthropic/claude-sonnet-4-6",
    },
    "broadcast": {
      "model": "google/gemini-3-flash",
    },
    "bullet-time": {
      "model": "openai/gpt-5.4-mini",
    },
    "construct": {
      "model": "google/gemini-3.1-pro",
      "variant": "high",
    },
    "deep-jack": {
      "model": "openai/gpt-5.3-codex",
      "variant": "medium",
    },
    "matrix-bend": {
      "model": "google/gemini-3.1-pro",
      "variant": "high",
    },
    "red-pill": {
      "model": "anthropic/claude-sonnet-4-6",
    },
    "source": {
      "model": "openai/gpt-5.3-codex",
      "variant": "xhigh",
    },
  },
}
`;

exports[`generateModelConfig all native providers uses preferred models with isMax20 flag when all natives available 1`] = `
{
  "$schema": "https://raw.githubusercontent.com/klpanagi/matrixx/dev/assets/matrixx.schema.json",
  "agents": {
    "architect": {
      "model": "anthropic/claude-sonnet-4-6",
    },
    "cipher": {
      "model": "anthropic/claude-sonnet-4-6",
    },
    "construct": {
      "model": "google/gemini-3-flash",
    },
    "keymaker": {
      "model": "openai/gpt-5.3-codex",
      "variant": "medium",
    },
    "merovingian": {
      "model": "openai/gpt-5.2",
      "variant": "high",
    },
    "morpheus": {
      "model": "anthropic/claude-opus-4-6",
      "variant": "max",
    },
    "niobe": {
      "model": "anthropic/claude-sonnet-4-6",
    },
    "operator": {
      "model": "anthropic/claude-sonnet-4-6",
    },
    "oracle": {
      "model": "anthropic/claude-opus-4-6",
      "variant": "max",
    },
    "sentinel": {
      "model": "anthropic/claude-sonnet-4-6",
    },
    "seraph": {
      "model": "anthropic/claude-opus-4-6",
      "variant": "max",
    },
    "smith": {
      "model": "openai/gpt-5.2",
      "variant": "medium",
    },
    "trinity": {
      "model": "anthropic/claude-haiku-4-5",
    },
    "zion": {
      "model": "anthropic/claude-sonnet-4-6",
    },
  },
  "categories": {
    "blue-pill": {
      "model": "anthropic/claude-sonnet-4-6",
    },
    "broadcast": {
      "model": "google/gemini-3-flash",
    },
    "bullet-time": {
      "model": "openai/gpt-5.4-mini",
    },
    "construct": {
      "model": "google/gemini-3.1-pro",
      "variant": "high",
    },
    "deep-jack": {
      "model": "openai/gpt-5.3-codex",
      "variant": "medium",
    },
    "matrix-bend": {
      "model": "google/gemini-3.1-pro",
      "variant": "high",
    },
    "red-pill": {
      "model": "anthropic/claude-opus-4-6",
      "variant": "max",
    },
    "source": {
      "model": "openai/gpt-5.3-codex",
      "variant": "xhigh",
    },
  },
}
`;

exports[`generateModelConfig fallback providers uses OpenCode Zen models when only OpenCode Zen is available 1`] = `
{
  "$schema": "https://raw.githubusercontent.com/klpanagi/matrixx/dev/assets/matrixx.schema.json",
  "agents": {
    "architect": {
      "model": "opencode/claude-sonnet-4-6",
    },
    "cipher": {
      "model": "opencode/claude-sonnet-4-6",
    },
    "construct": {
      "model": "opencode/gemini-3-flash",
    },
    "keymaker": {
      "model": "opencode/gpt-5.3-codex",
      "variant": "medium",
    },
    "merovingian": {
      "model": "opencode/gpt-5.2",
      "variant": "high",
    },
    "morpheus": {
      "model": "opencode/claude-opus-4-6",
      "variant": "max",
    },
    "niobe": {
      "model": "opencode/claude-sonnet-4-6",
    },
    "operator": {
      "model": "opencode/glm-4.7-free",
    },
    "oracle": {
      "model": "opencode/claude-opus-4-6",
      "variant": "max",
    },
    "sentinel": {
      "model": "opencode/claude-sonnet-4-6",
    },
    "seraph": {
      "model": "opencode/claude-opus-4-6",
      "variant": "max",
    },
    "smith": {
      "model": "opencode/gpt-5.2",
      "variant": "medium",
    },
    "trinity": {
      "model": "opencode/claude-haiku-4-5",
    },
    "zion": {
      "model": "opencode/claude-sonnet-4-6",
    },
  },
  "categories": {
    "blue-pill": {
      "model": "opencode/claude-sonnet-4-6",
    },
    "broadcast": {
      "model": "opencode/gemini-3-flash",
    },
    "bullet-time": {
      "model": "opencode/gpt-5.4-mini",
    },
    "construct": {
      "model": "opencode/gemini-3.1-pro",
      "variant": "high",
    },
    "deep-jack": {
      "model": "opencode/gpt-5.3-codex",
      "variant": "medium",
    },
    "matrix-bend": {
      "model": "opencode/gemini-3.1-pro",
      "variant": "high",
    },
    "red-pill": {
      "model": "opencode/claude-sonnet-4-6",
    },
    "source": {
      "model": "opencode/gpt-5.3-codex",
      "variant": "xhigh",
    },
  },
}
`;

exports[`generateModelConfig fallback providers uses OpenCode Zen models with isMax20 flag 1`] = `
{
  "$schema": "https://raw.githubusercontent.com/klpanagi/matrixx/dev/assets/matrixx.schema.json",
  "agents": {
    "architect": {
      "model": "opencode/claude-sonnet-4-6",
    },
    "cipher": {
      "model": "opencode/claude-sonnet-4-6",
    },
    "construct": {
      "model": "opencode/gemini-3-flash",
    },
    "keymaker": {
      "model": "opencode/gpt-5.3-codex",
      "variant": "medium",
    },
    "merovingian": {
      "model": "opencode/gpt-5.2",
      "variant": "high",
    },
    "morpheus": {
      "model": "opencode/claude-opus-4-6",
      "variant": "max",
    },
    "niobe": {
      "model": "opencode/claude-sonnet-4-6",
    },
    "operator": {
      "model": "opencode/glm-4.7-free",
    },
    "oracle": {
      "model": "opencode/claude-opus-4-6",
      "variant": "max",
    },
    "sentinel": {
      "model": "opencode/claude-sonnet-4-6",
    },
    "seraph": {
      "model": "opencode/claude-opus-4-6",
      "variant": "max",
    },
    "smith": {
      "model": "opencode/gpt-5.2",
      "variant": "medium",
    },
    "trinity": {
      "model": "opencode/claude-haiku-4-5",
    },
    "zion": {
      "model": "opencode/claude-sonnet-4-6",
    },
  },
  "categories": {
    "blue-pill": {
      "model": "opencode/claude-sonnet-4-6",
    },
    "broadcast": {
      "model": "opencode/gemini-3-flash",
    },
    "bullet-time": {
      "model": "opencode/gpt-5.4-mini",
    },
    "construct": {
      "model": "opencode/gemini-3.1-pro",
      "variant": "high",
    },
    "deep-jack": {
      "model": "opencode/gpt-5.3-codex",
      "variant": "medium",
    },
    "matrix-bend": {
      "model": "opencode/gemini-3.1-pro",
      "variant": "high",
    },
    "red-pill": {
      "model": "opencode/claude-opus-4-6",
      "variant": "max",
    },
    "source": {
      "model": "opencode/gpt-5.3-codex",
      "variant": "xhigh",
    },
  },
}
`;

exports[`generateModelConfig fallback providers uses GitHub Copilot models when only Copilot is available 1`] = `
{
  "$schema": "https://raw.githubusercontent.com/klpanagi/matrixx/dev/assets/matrixx.schema.json",
  "agents": {
    "architect": {
      "model": "github-copilot/claude-sonnet-4-6",
    },
    "cipher": {
      "model": "github-copilot/claude-sonnet-4-6",
    },
    "construct": {
      "model": "github-copilot/gemini-3-flash-preview",
    },
    "keymaker": {
      "model": "github-copilot/gpt-5.3-codex",
      "variant": "medium",
    },
    "merovingian": {
      "model": "github-copilot/gpt-5.2",
      "variant": "high",
    },
    "morpheus": {
      "model": "github-copilot/claude-opus-4.6",
      "variant": "max",
    },
    "niobe": {
      "model": "github-copilot/claude-sonnet-4-6",
    },
    "operator": {
      "model": "github-copilot/claude-sonnet-4-6",
    },
    "oracle": {
      "model": "github-copilot/claude-opus-4.6",
      "variant": "max",
    },
    "sentinel": {
      "model": "github-copilot/claude-sonnet-4-6",
    },
    "seraph": {
      "model": "github-copilot/claude-opus-4.6",
      "variant": "max",
    },
    "smith": {
      "model": "github-copilot/gpt-5.2",
      "variant": "medium",
    },
    "trinity": {
      "model": "github-copilot/gpt-5-mini",
    },
    "zion": {
      "model": "github-copilot/claude-sonnet-4-6",
    },
  },
  "categories": {
    "blue-pill": {
      "model": "github-copilot/claude-sonnet-4-6",
    },
    "broadcast": {
      "model": "github-copilot/gemini-3-flash-preview",
    },
    "bullet-time": {
      "model": "github-copilot/gpt-5.4-mini",
    },
    "construct": {
      "model": "github-copilot/gemini-3.1-pro",
      "variant": "high",
    },
    "deep-jack": {
      "model": "github-copilot/gpt-5.3-codex",
      "variant": "medium",
    },
    "matrix-bend": {
      "model": "github-copilot/gemini-3.1-pro",
      "variant": "high",
    },
    "red-pill": {
      "model": "github-copilot/claude-sonnet-4-6",
    },
    "source": {
      "model": "github-copilot/gpt-5.3-codex",
      "variant": "xhigh",
    },
  },
}
`;

exports[`generateModelConfig fallback providers uses GitHub Copilot models with isMax20 flag 1`] = `
{
  "$schema": "https://raw.githubusercontent.com/klpanagi/matrixx/dev/assets/matrixx.schema.json",
  "agents": {
    "architect": {
      "model": "github-copilot/claude-sonnet-4-6",
    },
    "cipher": {
      "model": "github-copilot/claude-sonnet-4-6",
    },
    "construct": {
      "model": "github-copilot/gemini-3-flash-preview",
    },
    "keymaker": {
      "model": "github-copilot/gpt-5.3-codex",
      "variant": "medium",
    },
    "merovingian": {
      "model": "github-copilot/gpt-5.2",
      "variant": "high",
    },
    "morpheus": {
      "model": "github-copilot/claude-opus-4.6",
      "variant": "max",
    },
    "niobe": {
      "model": "github-copilot/claude-sonnet-4-6",
    },
    "operator": {
      "model": "github-copilot/claude-sonnet-4-6",
    },
    "oracle": {
      "model": "github-copilot/claude-opus-4.6",
      "variant": "max",
    },
    "sentinel": {
      "model": "github-copilot/claude-sonnet-4-6",
    },
    "seraph": {
      "model": "github-copilot/claude-opus-4.6",
      "variant": "max",
    },
    "smith": {
      "model": "github-copilot/gpt-5.2",
      "variant": "medium",
    },
    "trinity": {
      "model": "github-copilot/gpt-5-mini",
    },
    "zion": {
      "model": "github-copilot/claude-sonnet-4-6",
    },
  },
  "categories": {
    "blue-pill": {
      "model": "github-copilot/claude-sonnet-4-6",
    },
    "broadcast": {
      "model": "github-copilot/gemini-3-flash-preview",
    },
    "bullet-time": {
      "model": "github-copilot/gpt-5.4-mini",
    },
    "construct": {
      "model": "github-copilot/gemini-3.1-pro",
      "variant": "high",
    },
    "deep-jack": {
      "model": "github-copilot/gpt-5.3-codex",
      "variant": "medium",
    },
    "matrix-bend": {
      "model": "github-copilot/gemini-3.1-pro",
      "variant": "high",
    },
    "red-pill": {
      "model": "github-copilot/claude-opus-4.6",
      "variant": "max",
    },
    "source": {
      "model": "github-copilot/gpt-5.3-codex",
      "variant": "xhigh",
    },
  },
}
`;

exports[`generateModelConfig fallback providers uses ZAI model for librarian when only ZAI is available 1`] = `
{
  "$schema": "https://raw.githubusercontent.com/klpanagi/matrixx/dev/assets/matrixx.schema.json",
  "agents": {
    "architect": {
      "model": "opencode/glm-4.7-free",
    },
    "cipher": {
      "model": "opencode/glm-4.7-free",
    },
    "construct": {
      "model": "zai-coding-plan/glm-4.6v",
    },
    "merovingian": {
      "model": "opencode/glm-4.7-free",
    },
    "morpheus": {
      "model": "zai-coding-plan/glm-5",
    },
    "niobe": {
      "model": "opencode/glm-4.7-free",
    },
    "operator": {
      "model": "zai-coding-plan/glm-4.7",
    },
    "oracle": {
      "model": "opencode/glm-4.7-free",
    },
    "sentinel": {
      "model": "opencode/glm-4.7-free",
    },
    "seraph": {
      "model": "opencode/glm-4.7-free",
    },
    "smith": {
      "model": "opencode/glm-4.7-free",
    },
    "trinity": {
      "model": "opencode/gpt-5-nano",
    },
    "zion": {
      "model": "opencode/glm-4.7-free",
    },
  },
  "categories": {
    "blue-pill": {
      "model": "opencode/glm-4.7-free",
    },
    "broadcast": {
      "model": "opencode/glm-4.7-free",
    },
    "bullet-time": {
      "model": "opencode/glm-4.7-free",
    },
    "construct": {
      "model": "zai-coding-plan/glm-5",
    },
    "red-pill": {
      "model": "opencode/glm-4.7-free",
    },
    "source": {
      "model": "opencode/glm-4.7-free",
    },
  },
}
`;

exports[`generateModelConfig fallback providers uses ZAI model for librarian with isMax20 flag 1`] = `
{
  "$schema": "https://raw.githubusercontent.com/klpanagi/matrixx/dev/assets/matrixx.schema.json",
  "agents": {
    "architect": {
      "model": "opencode/glm-4.7-free",
    },
    "cipher": {
      "model": "opencode/glm-4.7-free",
    },
    "construct": {
      "model": "zai-coding-plan/glm-4.6v",
    },
    "merovingian": {
      "model": "opencode/glm-4.7-free",
    },
    "morpheus": {
      "model": "zai-coding-plan/glm-5",
    },
    "niobe": {
      "model": "opencode/glm-4.7-free",
    },
    "operator": {
      "model": "zai-coding-plan/glm-4.7",
    },
    "oracle": {
      "model": "opencode/glm-4.7-free",
    },
    "sentinel": {
      "model": "opencode/glm-4.7-free",
    },
    "seraph": {
      "model": "opencode/glm-4.7-free",
    },
    "smith": {
      "model": "opencode/glm-4.7-free",
    },
    "trinity": {
      "model": "opencode/gpt-5-nano",
    },
    "zion": {
      "model": "opencode/glm-4.7-free",
    },
  },
  "categories": {
    "blue-pill": {
      "model": "opencode/glm-4.7-free",
    },
    "broadcast": {
      "model": "opencode/glm-4.7-free",
    },
    "bullet-time": {
      "model": "opencode/glm-4.7-free",
    },
    "construct": {
      "model": "zai-coding-plan/glm-5",
    },
    "red-pill": {
      "model": "opencode/glm-4.7-free",
    },
    "source": {
      "model": "opencode/glm-4.7-free",
    },
  },
}
`;

exports[`generateModelConfig mixed provider scenarios uses Claude + OpenCode Zen combination 1`] = `
{
  "$schema": "https://raw.githubusercontent.com/klpanagi/matrixx/dev/assets/matrixx.schema.json",
  "agents": {
    "architect": {
      "model": "anthropic/claude-sonnet-4-6",
    },
    "cipher": {
      "model": "anthropic/claude-sonnet-4-6",
    },
    "construct": {
      "model": "opencode/gemini-3-flash",
    },
    "keymaker": {
      "model": "opencode/gpt-5.3-codex",
      "variant": "medium",
    },
    "merovingian": {
      "model": "opencode/gpt-5.2",
      "variant": "high",
    },
    "morpheus": {
      "model": "anthropic/claude-opus-4-6",
      "variant": "max",
    },
    "niobe": {
      "model": "anthropic/claude-sonnet-4-6",
    },
    "operator": {
      "model": "opencode/glm-4.7-free",
    },
    "oracle": {
      "model": "anthropic/claude-opus-4-6",
      "variant": "max",
    },
    "sentinel": {
      "model": "anthropic/claude-sonnet-4-6",
    },
    "seraph": {
      "model": "anthropic/claude-opus-4-6",
      "variant": "max",
    },
    "smith": {
      "model": "opencode/gpt-5.2",
      "variant": "medium",
    },
    "trinity": {
      "model": "anthropic/claude-haiku-4-5",
    },
    "zion": {
      "model": "anthropic/claude-sonnet-4-6",
    },
  },
  "categories": {
    "blue-pill": {
      "model": "anthropic/claude-sonnet-4-6",
    },
    "broadcast": {
      "model": "opencode/gemini-3-flash",
    },
    "bullet-time": {
      "model": "opencode/gpt-5.4-mini",
    },
    "construct": {
      "model": "opencode/gemini-3.1-pro",
      "variant": "high",
    },
    "deep-jack": {
      "model": "opencode/gpt-5.3-codex",
      "variant": "medium",
    },
    "matrix-bend": {
      "model": "opencode/gemini-3.1-pro",
      "variant": "high",
    },
    "red-pill": {
      "model": "anthropic/claude-sonnet-4-6",
    },
    "source": {
      "model": "opencode/gpt-5.3-codex",
      "variant": "xhigh",
    },
  },
}
`;

exports[`generateModelConfig mixed provider scenarios uses OpenAI + Copilot combination 1`] = `
{
  "$schema": "https://raw.githubusercontent.com/klpanagi/matrixx/dev/assets/matrixx.schema.json",
  "agents": {
    "architect": {
      "model": "github-copilot/claude-sonnet-4-6",
    },
    "cipher": {
      "model": "github-copilot/claude-sonnet-4-6",
    },
    "construct": {
      "model": "github-copilot/gemini-3-flash-preview",
    },
    "keymaker": {
      "model": "openai/gpt-5.3-codex",
      "variant": "medium",
    },
    "merovingian": {
      "model": "openai/gpt-5.2",
      "variant": "high",
    },
    "morpheus": {
      "model": "github-copilot/claude-opus-4.6",
      "variant": "max",
    },
    "niobe": {
      "model": "github-copilot/claude-sonnet-4-6",
    },
    "operator": {
      "model": "github-copilot/claude-sonnet-4-6",
    },
    "oracle": {
      "model": "github-copilot/claude-opus-4.6",
      "variant": "max",
    },
    "sentinel": {
      "model": "github-copilot/claude-sonnet-4-6",
    },
    "seraph": {
      "model": "github-copilot/claude-opus-4.6",
      "variant": "max",
    },
    "smith": {
      "model": "openai/gpt-5.2",
      "variant": "medium",
    },
    "trinity": {
      "model": "github-copilot/gpt-5-mini",
    },
    "zion": {
      "model": "github-copilot/claude-sonnet-4-6",
    },
  },
  "categories": {
    "blue-pill": {
      "model": "github-copilot/claude-sonnet-4-6",
    },
    "broadcast": {
      "model": "github-copilot/gemini-3-flash-preview",
    },
    "bullet-time": {
      "model": "openai/gpt-5.4-mini",
    },
    "construct": {
      "model": "github-copilot/gemini-3.1-pro",
      "variant": "high",
    },
    "deep-jack": {
      "model": "openai/gpt-5.3-codex",
      "variant": "medium",
    },
    "matrix-bend": {
      "model": "github-copilot/gemini-3.1-pro",
      "variant": "high",
    },
    "red-pill": {
      "model": "github-copilot/claude-sonnet-4-6",
    },
    "source": {
      "model": "openai/gpt-5.3-codex",
      "variant": "xhigh",
    },
  },
}
`;

exports[`generateModelConfig mixed provider scenarios uses Claude + ZAI combination (librarian uses ZAI) 1`] = `
{
  "$schema": "https://raw.githubusercontent.com/klpanagi/matrixx/dev/assets/matrixx.schema.json",
  "agents": {
    "architect": {
      "model": "anthropic/claude-sonnet-4-6",
    },
    "cipher": {
      "model": "anthropic/claude-sonnet-4-6",
    },
    "construct": {
      "model": "zai-coding-plan/glm-4.6v",
    },
    "merovingian": {
      "model": "anthropic/claude-opus-4-6",
      "variant": "max",
    },
    "morpheus": {
      "model": "anthropic/claude-opus-4-6",
      "variant": "max",
    },
    "niobe": {
      "model": "anthropic/claude-sonnet-4-6",
    },
    "operator": {
      "model": "zai-coding-plan/glm-4.7",
    },
    "oracle": {
      "model": "anthropic/claude-opus-4-6",
      "variant": "max",
    },
    "sentinel": {
      "model": "anthropic/claude-sonnet-4-6",
    },
    "seraph": {
      "model": "anthropic/claude-opus-4-6",
      "variant": "max",
    },
    "smith": {
      "model": "anthropic/claude-opus-4-6",
      "variant": "max",
    },
    "trinity": {
      "model": "anthropic/claude-haiku-4-5",
    },
    "zion": {
      "model": "anthropic/claude-sonnet-4-6",
    },
  },
  "categories": {
    "blue-pill": {
      "model": "anthropic/claude-sonnet-4-6",
    },
    "broadcast": {
      "model": "anthropic/claude-sonnet-4-6",
    },
    "bullet-time": {
      "model": "anthropic/claude-haiku-4-5",
    },
    "construct": {
      "model": "zai-coding-plan/glm-5",
    },
    "red-pill": {
      "model": "anthropic/claude-sonnet-4-6",
    },
    "source": {
      "model": "anthropic/claude-opus-4-6",
      "variant": "max",
    },
  },
}
`;

exports[`generateModelConfig mixed provider scenarios uses Gemini + Claude combination (explore uses Gemini) 1`] = `
{
  "$schema": "https://raw.githubusercontent.com/klpanagi/matrixx/dev/assets/matrixx.schema.json",
  "agents": {
    "architect": {
      "model": "anthropic/claude-sonnet-4-6",
    },
    "cipher": {
      "model": "anthropic/claude-sonnet-4-6",
    },
    "construct": {
      "model": "google/gemini-3-flash",
    },
    "merovingian": {
      "model": "google/gemini-3.1-pro",
      "variant": "high",
    },
    "morpheus": {
      "model": "anthropic/claude-opus-4-6",
      "variant": "max",
    },
    "niobe": {
      "model": "anthropic/claude-sonnet-4-6",
    },
    "operator": {
      "model": "anthropic/claude-sonnet-4-6",
    },
    "oracle": {
      "model": "anthropic/claude-opus-4-6",
      "variant": "max",
    },
    "sentinel": {
      "model": "anthropic/claude-sonnet-4-6",
    },
    "seraph": {
      "model": "anthropic/claude-opus-4-6",
      "variant": "max",
    },
    "smith": {
      "model": "anthropic/claude-opus-4-6",
      "variant": "max",
    },
    "trinity": {
      "model": "anthropic/claude-haiku-4-5",
    },
    "zion": {
      "model": "anthropic/claude-sonnet-4-6",
    },
  },
  "categories": {
    "blue-pill": {
      "model": "anthropic/claude-sonnet-4-6",
    },
    "broadcast": {
      "model": "google/gemini-3-flash",
    },
    "bullet-time": {
      "model": "anthropic/claude-haiku-4-5",
    },
    "construct": {
      "model": "google/gemini-3.1-pro",
      "variant": "high",
    },
    "matrix-bend": {
      "model": "google/gemini-3.1-pro",
      "variant": "high",
    },
    "red-pill": {
      "model": "anthropic/claude-sonnet-4-6",
    },
    "source": {
      "model": "google/gemini-3.1-pro",
      "variant": "high",
    },
  },
}
`;

exports[`generateModelConfig mixed provider scenarios uses all fallback providers together 1`] = `
{
  "$schema": "https://raw.githubusercontent.com/klpanagi/matrixx/dev/assets/matrixx.schema.json",
  "agents": {
    "architect": {
      "model": "github-copilot/claude-sonnet-4-6",
    },
    "cipher": {
      "model": "github-copilot/claude-sonnet-4-6",
    },
    "construct": {
      "model": "github-copilot/gemini-3-flash-preview",
    },
    "keymaker": {
      "model": "github-copilot/gpt-5.3-codex",
      "variant": "medium",
    },
    "merovingian": {
      "model": "github-copilot/gpt-5.2",
      "variant": "high",
    },
    "morpheus": {
      "model": "github-copilot/claude-opus-4.6",
      "variant": "max",
    },
    "niobe": {
      "model": "github-copilot/claude-sonnet-4-6",
    },
    "operator": {
      "model": "zai-coding-plan/glm-4.7",
    },
    "oracle": {
      "model": "github-copilot/claude-opus-4.6",
      "variant": "max",
    },
    "sentinel": {
      "model": "github-copilot/claude-sonnet-4-6",
    },
    "seraph": {
      "model": "github-copilot/claude-opus-4.6",
      "variant": "max",
    },
    "smith": {
      "model": "github-copilot/gpt-5.2",
      "variant": "medium",
    },
    "trinity": {
      "model": "opencode/claude-haiku-4-5",
    },
    "zion": {
      "model": "github-copilot/claude-sonnet-4-6",
    },
  },
  "categories": {
    "blue-pill": {
      "model": "github-copilot/claude-sonnet-4-6",
    },
    "broadcast": {
      "model": "github-copilot/gemini-3-flash-preview",
    },
    "bullet-time": {
      "model": "github-copilot/gpt-5.4-mini",
    },
    "construct": {
      "model": "github-copilot/gemini-3.1-pro",
      "variant": "high",
    },
    "deep-jack": {
      "model": "github-copilot/gpt-5.3-codex",
      "variant": "medium",
    },
    "matrix-bend": {
      "model": "github-copilot/gemini-3.1-pro",
      "variant": "high",
    },
    "red-pill": {
      "model": "github-copilot/claude-sonnet-4-6",
    },
    "source": {
      "model": "github-copilot/gpt-5.3-codex",
      "variant": "xhigh",
    },
  },
}
`;

exports[`generateModelConfig mixed provider scenarios uses all providers together 1`] = `
{
  "$schema": "https://raw.githubusercontent.com/klpanagi/matrixx/dev/assets/matrixx.schema.json",
  "agents": {
    "architect": {
      "model": "anthropic/claude-sonnet-4-6",
    },
    "cipher": {
      "model": "anthropic/claude-sonnet-4-6",
    },
    "construct": {
      "model": "google/gemini-3-flash",
    },
    "keymaker": {
      "model": "openai/gpt-5.3-codex",
      "variant": "medium",
    },
    "merovingian": {
      "model": "openai/gpt-5.2",
      "variant": "high",
    },
    "morpheus": {
      "model": "anthropic/claude-opus-4-6",
      "variant": "max",
    },
    "niobe": {
      "model": "anthropic/claude-sonnet-4-6",
    },
    "operator": {
      "model": "zai-coding-plan/glm-4.7",
    },
    "oracle": {
      "model": "anthropic/claude-opus-4-6",
      "variant": "max",
    },
    "sentinel": {
      "model": "anthropic/claude-sonnet-4-6",
    },
    "seraph": {
      "model": "anthropic/claude-opus-4-6",
      "variant": "max",
    },
    "smith": {
      "model": "openai/gpt-5.2",
      "variant": "medium",
    },
    "trinity": {
      "model": "anthropic/claude-haiku-4-5",
    },
    "zion": {
      "model": "anthropic/claude-sonnet-4-6",
    },
  },
  "categories": {
    "blue-pill": {
      "model": "anthropic/claude-sonnet-4-6",
    },
    "broadcast": {
      "model": "google/gemini-3-flash",
    },
    "bullet-time": {
      "model": "openai/gpt-5.4-mini",
    },
    "construct": {
      "model": "google/gemini-3.1-pro",
      "variant": "high",
    },
    "deep-jack": {
      "model": "openai/gpt-5.3-codex",
      "variant": "medium",
    },
    "matrix-bend": {
      "model": "google/gemini-3.1-pro",
      "variant": "high",
    },
    "red-pill": {
      "model": "anthropic/claude-sonnet-4-6",
    },
    "source": {
      "model": "openai/gpt-5.3-codex",
      "variant": "xhigh",
    },
  },
}
`;

exports[`generateModelConfig mixed provider scenarios uses all providers with isMax20 flag 1`] = `
{
  "$schema": "https://raw.githubusercontent.com/klpanagi/matrixx/dev/assets/matrixx.schema.json",
  "agents": {
    "architect": {
      "model": "anthropic/claude-sonnet-4-6",
    },
    "cipher": {
      "model": "anthropic/claude-sonnet-4-6",
    },
    "construct": {
      "model": "google/gemini-3-flash",
    },
    "keymaker": {
      "model": "openai/gpt-5.3-codex",
      "variant": "medium",
    },
    "merovingian": {
      "model": "openai/gpt-5.2",
      "variant": "high",
    },
    "morpheus": {
      "model": "anthropic/claude-opus-4-6",
      "variant": "max",
    },
    "niobe": {
      "model": "anthropic/claude-sonnet-4-6",
    },
    "operator": {
      "model": "zai-coding-plan/glm-4.7",
    },
    "oracle": {
      "model": "anthropic/claude-opus-4-6",
      "variant": "max",
    },
    "sentinel": {
      "model": "anthropic/claude-sonnet-4-6",
    },
    "seraph": {
      "model": "anthropic/claude-opus-4-6",
      "variant": "max",
    },
    "smith": {
      "model": "openai/gpt-5.2",
      "variant": "medium",
    },
    "trinity": {
      "model": "anthropic/claude-haiku-4-5",
    },
    "zion": {
      "model": "anthropic/claude-sonnet-4-6",
    },
  },
  "categories": {
    "blue-pill": {
      "model": "anthropic/claude-sonnet-4-6",
    },
    "broadcast": {
      "model": "google/gemini-3-flash",
    },
    "bullet-time": {
      "model": "openai/gpt-5.4-mini",
    },
    "construct": {
      "model": "google/gemini-3.1-pro",
      "variant": "high",
    },
    "deep-jack": {
      "model": "openai/gpt-5.3-codex",
      "variant": "medium",
    },
    "matrix-bend": {
      "model": "google/gemini-3.1-pro",
      "variant": "high",
    },
    "red-pill": {
      "model": "anthropic/claude-opus-4-6",
      "variant": "max",
    },
    "source": {
      "model": "openai/gpt-5.3-codex",
      "variant": "xhigh",
    },
  },
}
`;
